--- a/src/main/resources/templates/admin/fragments/adminHeader.html
+++ b/src/main/resources/templates/admin/fragments/adminHeader.html
@@ -32,6 +32,8 @@
                 
                 <li th:replace="::menuItem ('/admin/contacts','contacts','Страница с контактами','phone','Контакты')"/>
                 
+                <li th:replace="::menuItem ('/admin/userFeedBack','userFeedBack','Страница с заявками пользователей','people','Заявки')"/>
+                
             </ul>
             
             <div class="right-toolbar">
