--- a/src/main/resources/templates/admin/fragments/adminJs.html
+++ b/src/main/resources/templates/admin/fragments/adminJs.html
@@ -29,4 +29,7 @@
     <th:block th:case="contactsList">
         <script th:src="@{/resources/js/admin/contactAdd.js}"></script>
     </th:block>
+    <th:block th:case="userFeedBackList">
+        <script th:src="@{/resources/js/admin/userFeedBack.js}"></script>
+    </th:block>
 </th:block></th:block>
