--- a/src/main/resources/static/resources/css/admin/dashboard.css
+++ b/src/main/resources/static/resources/css/admin/dashboard.css
@@ -129,3 +129,10 @@ main {
 label{
     font-family: GilroyBold; 
 }
+table {
+    table-layout: fixed;
+    width:100%
+}
+td {
+    word-wrap:break-word;
+}
