--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -4,7 +4,7 @@
             <li><a href="/">Главная</a></li>
             <li><a href="/courses">Каталог программ</a></li>
             <li><a href="/calendar">Календарь обучения</a></li>
-            <li><a href="/about">О центре</a></li>
+            <li><a href="/about">О нас</a></li>
             <li><a href="/news">Новости</a></li>
             <!--<li><a href="/signin">Записаться</a></li>-->
             <li><a href="/contacts">Контакты</a></li>
