--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html th:fragment="layout (template, page)">
+<html th:fragment="layout (template, page, pageTitle)">
 
     <head>
         <meta charset="UTF-8">
@@ -9,17 +9,17 @@
         
         <link th:href="@{/resources/css/footer.css}" rel="stylesheet">
         <link th:href="@{/resources/css/totopbutton.css}" rel="stylesheet">
-        <link th:href="@{/webjars/pushy/1.1.0/css/pushy.css}" rel="stylesheet">
+        <link th:href="@{/resources/css/pushy.css}" rel="stylesheet">
         <link rel="stylesheet" th:href="@{/webjars/bootstrap/4.5.2/css/bootstrap.min.css}"/>
         <link rel="stylesheet" th:href="@{/webjars/font-awesome/4.5.0/css/font-awesome.min.css}"/>
         
         <th:block th:insert="~{fragments/css :: css}"></th:block>
         
-        <title>ДПО Политех - Главная</title>
+        <title th:text="${pageTitle}"></title>
     </head>
 
 <body>        
-    <header th:replace="~{fragments/header :: header}" />
+    <header th:replace="~{fragments/header :: header(${page})}" />
     
     <main th:replace="${template}" />   
 
