--- a/src/main/resources/templates/admin/fragments/adminLayout.html
+++ b/src/main/resources/templates/admin/fragments/adminLayout.html
@@ -25,6 +25,7 @@
     <script th:src="@{/webjars/tether/1.4.0/dist/js/tether.min.js}"></script>
     <script th:src="@{/webjars/jquery/3.5.1/jquery.min.js}"></script>
     <script th:src="@{/webjars/bootstrap/4.5.2/js/bootstrap.min.js}"></script>
+    <script th:src="@{/resources/js/admin/_csrf.js}"></script>
     <th:block th:insert="~{/admin/fragments/adminJs :: adminJs}"></th:block>
 </body>
 
