--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" 
-      th:replace="~{admin/fragments/adminLayout :: adminLayout (~{::main},'home')}">
+      th:replace="~{admin/fragments/adminLayout :: adminLayout (~{::main},'index')}">
     
 <main>
     
@@ -10,27 +10,17 @@
         
         <h2>Популярные курсы/сферы обучения</h2>
         
-        <div class="col-12 d-flex flex-column align-items-center" id="listSliderItems">
-<!--            <?php foreach($sliders as $slider) {
-                Theme::block('main/slider_item', [
-                    'item' => $slider
-                ]);
-            } ?>-->
+        <div class="col-12 d-flex flex-column align-items-center" id="listIndexItems">
+<th:block 
+    th:replace="~{admin/fragments/index/indexItems :: indexItems (${indexItems})}">
+        
+</th:block>
         </div>
         
-        <button class="btn btn-outline-primary mt-4" onclick="main.addSliderItem()">
+        <button class="btn btn-outline-primary mt-4" onclick="index.addIndexItem()">
             Добавить блок
         </button>
         
-        <h2 class="my-2">Мы в цифрах</h2>
-        
-        <div class="d-flex justify-content-around flex-wrap mt-4">
-<!--            <?php foreach($numbers as $number) {
-                Theme::block('main/number_item', [
-                    'item' => $number
-                ]);
-            } ?>-->
-        </div>
         
     </div>
     
