--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -7,7 +7,11 @@
                 <p>Дополнительное профессиональное образование</p>
                 <p>Московский Политех</p>
             </div>
+            
         </div></a>
+        <div class="contacts_vk_header">
+            <p>+7 (495) 223-05-21</p>
+        </div>
         <ul class="menu">
             <p>+7 (495) 223-05-21, <a href="mailto:dpo@mospolytech.ru">dpo@mospolytech.ru</a></p>
             <li><a href="/courses">Каталог программ</a></li>
