--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -37,6 +37,7 @@
     <!-- Скрипты для кнопки "наверх" -->
     <script th:src="@{/resources/js/totopbutton.js}"></script>
     <script th:src="@{/resources/js/feedback.js}"></script>
+    <script th:src="@{/resources/js/_csrf.js}"></script>
     
     <th:block th:insert="~{fragments/js :: js}"></th:block>
 
