--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -25,7 +25,13 @@
         <div class="contacts_vk_footer">
             <p>+7 (495) 223-05-21</p>
             <a href="mailto:dpo@mospolytech.ru"><p>dpo@mospolytech.ru</p></a>
+            <ul class="social-icons-5">
+                <li><a href="#"><i class="fa fa-vk"></i></a></li>
+                <li><a href="#"><i class="fa fa-odnoklassniki"></i></a></li>
+                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+            </ul>
         </div>
     </div>
-    <p class="license">© 2019 Московский политехнический университет</p>
+    <p class="license">© 2021 Московский политехнический университет</p>
 </footer>
